# muGrid

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Architecture.html  CHANGELOG.md  CMakeLists.txt  COVERAGE_ANALYSIS.md  CPPLINT.cfg  CodingConvention.html  Coverage.html  Cplusplus.html  CplusplusAPI.html  Examples.html  FFT.html  GPU.html  GettingStarted.html  Jenkinsfile  KERNELS.md  LinAlg.html  MANIFEST.in  Operators.html  Python.html  PythonAPI.html  README  README.md  SESSION_CONTEXT.md  Summary.html  codecov.yml  genindex.html  index.html  meson.build  meson.options  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  (+6 more)
doc/: CMakeLists.txt  Doxyfile  FFT.md  KERNELS.md  Makefile  requirements.txt  summary.rmk
doc/dev-docs/: requirements.txt
doc/source/: Architecture.rst  CodingConvention.rst  Coverage.rst  CplusplusAPI.rst  Doxyfile  Examples.rst  FFT.rst  GPU.rst  GettingStarted.rst  Grids.rst  Operators.rst  Python.rst  PythonAPI.rst  Summary.rst  conf.py  index.rst
examples/: CMakeLists.txt  benchmark.py  benchmark_db.py  benchmark_homogenization.py  benchmark_homogenization.sh  benchmark_homogenization_mpi.py  benchmark_homogenization_preconditioner.py  benchmark_poisson.sh  buckling.py  buckling_solver_class.py  circle_gibbs_ringing_simple_split_laminate.py  comparison_small_strain.py  components.py  concrete_micro_structure.npy  crack.py  demonstrator2.cc  demonstrator_dynamic_solve.cc  demonstrator_mpi.cc  direct_comparison_small_strain.py  elasto_plastic_comparison.py  evaluator_materials_dunant_example.py  example_damage_diff_mean_control.py  fft_roundtrip.py  field_collection.py  field_extraction_example.py  first_concrete_example.py  fourier_derivative.py  free_surface.py  gradient.py  homogenization.py  hyper-elasticity.cc  hyper-elasticity.py  io.py  meson.build  netcdf_io_use_case.py  plot_tri.py  poisson.py  precision_homogenization.py  projection_comparison.cc  projection_comparison.py  (+20 more)
examples/paper_examples/: CMakeLists.txt  compute_analytical_eshelby_solution.py  concrete_micro_structure_201.npy  example_A-single_pixel_inhomogeneity.py  example_B-two_pillars_and_vacuum.py  example_C-eshelby_inhomogeneity.py  example_D-damage_problem.py  helper_functions.py  new_example_damage.py  python_paper_example_imports.py  random_field_11.npy  random_field_201.npy  random_field_5.npy  test_analytical_eshelby_solution.py
language_bindings/: CMakeLists.txt  meson.build
language_bindings/libmugrid/: CMakeLists.txt
language_bindings/python/: CMakeLists.txt  __init__.py  bind_by_gradient.cc  bind_py_cell.cc  bind_py_cell_data.cc  bind_py_class_solvers.cc  bind_py_common.cc  bind_py_common_mugrid.cc  bind_py_common_muspectre.cc  bind_py_communicator.cc  bind_py_convolution_operator.cc  bind_py_declarations.hh  bind_py_decomposition.cc  bind_py_derivatives.cc  bind_py_device.cc  bind_py_fem_discretisation.cc  bind_py_fft.cc  bind_py_fftengine.cc  bind_py_field.cc  bind_py_field_collection.cc  bind_py_file_io.cc  bind_py_gradient.cc  bind_py_krylov_solvers.cc  bind_py_linalg.cc  bind_py_material.cc  bind_py_material_dunant.cc  bind_py_material_hyper_elastic1.cc  bind_py_material_hyper_elastic2.cc  bind_py_material_hyper_elasto_plastic1.cc  bind_py_material_hyper_elasto_plastic2.cc  bind_py_material_laminate.cc  bind_py_material_linear_anisotropic.cc  bind_py_material_linear_diffusion.cc  bind_py_material_linear_elastic1.cc  bind_py_material_linear_elastic2.cc  bind_py_material_linear_elastic3.cc  bind_py_material_linear_elastic4.cc  bind_py_material_linear_elastic_damage1.cc  bind_py_material_linear_elastic_damage2.cc  bind_py_material_linear_elastic_generic.cc  (+19 more)
src/: CMakeLists.txt  T4_map_proxy.hh  ccoord_operations.cc  exception.hh  field_collection.cc  field_collection.hh  field_typed.hh  file_io_base.hh  git_watcher.cmake  mapped_state_field.hh  meson.build  raw_memory_operations.hh  state_field.cc  state_field_map.hh  units.cc
src/cell/: CMakeLists.txt  cell.cc  cell.hh  cell_adaptor.hh  cell_base.cc  cell_base.hh  cell_data.cc  cell_data.hh  cell_factory.hh  cell_split.cc  cell_split.hh  cell_split_factory.hh  cell_traits.hh  ncell.cc  ncell.hh
src/common/: CMakeLists.txt  T4_map_proxy.hh  ccoord_operations.hh  common.cc  common.hh  communicator.hh  eigen_tools.hh  field.hh  field_base.hh  field_collection.hh  field_collection_base.hh  field_collection_global.hh  field_collection_local.hh  field_helpers.hh  field_map.hh  field_map_base.hh  field_map_dynamic.hh  field_map_matrixlike.hh  field_map_scalar.hh  field_map_tensor.hh  field_typed.hh  geometry.hh  intersection_octree.cc  intersection_octree.hh  intersection_volume_calculator_corkpp.hh  iterators.hh  muSpectre_common.hh  ref_array.hh  statefield.hh  tensor_algebra.hh  test_goodies.hh  utilities.hh  version.cc  version.cc.skeleton  voigt_conversion.cc  voigt_conversion.hh
src/fft/: CMakeLists.txt  fft_engine_base.cc  fft_engine_base.hh  fft_utils.cc  fft_utils.hh  (+18 more)
tests/: CMakeLists.txt  TODO_test_material_linear_elastic3.cc  TODO_test_material_linear_elastic4.cc  TODOmpi_test_projection_finite.cc  TODOmpi_test_projection_small.cc  TODOtest_cell_base.cc  TODOtest_material_evaluator.cc  TODOtest_projection_finite.cc  TODOtest_projection_finite_discrete.cc  TODOtest_projection_small.cc  TODOtest_solver_newton_cg.cc  conftest.py  elasto-plasticity.py  field_test_fixtures.hh  header_test_ccoord_operations.cc  header_test_eigen_tools.cc  header_test_field_collections.cc  header_test_fields.cc  header_test_raw_field_map.cc  header_test_ref_array.cc  header_test_statefields.cc  header_test_t4_map.cc  header_test_tensor_algebra.cc  io_mpi_test_file_io.hh  io_mpi_test_file_io_netcdf.cc  io_test_file_io.hh  io_test_file_io_base.cc  io_test_file_io_netcdf.cc  main_test_suite.cc  meson.build  mpi_context.hh  mpi_field_test_fixtures.hh  mpi_main_test_suite.cc  mpi_test_communicator.cc  mpi_test_decomposition.cc  mpi_test_fft_engine.cc  mpi_test_field_map.cc  mpi_test_projection.hh  mpi_test_projection_finite.cc  mpi_test_projection_small.cc  (+179 more)
(+759 files in other folders)
