[build-system]
requires = ["meson>=1.0.0", "meson-python>=0.15.0", "ninja", "numpy>=1.20.0"]
build-backend = "mesonpy"

[project]
name = "muGrid"
description = "MPI-parallel regular grids"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ali Falsafi", email = "ali.falsafi@epfl.ch" },
    { name = "Till Junge", email = "till.junge@altermail.ch" },
    { name = "Richard Leute", email = "richard.leute@imtek.uni-freiburg.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]
dependencies = [
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
documentation = "https://muspectre.github.io/muGrid/"
repository = "https://github.com/muSpectre/muGrid"
changelog = "https://github.com/muSpectre/muGrid/blob/main/CHANGELOG.md"

[[tool.cibuildwheel.overrides]]
select = "*manylinux*"
# Build static NetCDF library
before-all = [
    "NETCDF_VERSION='4.9.0'",
    "curl -L https://github.com/Unidata/netcdf-c/archive/refs/tags/v${NETCDF_VERSION}.tar.gz | tar -xzC /tmp",
    "mkdir /tmp/build-netcdf",
    "pushd /tmp/build-netcdf",
    "cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_VERBOSE_MAKEFILE=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_TESTING=OFF -DBUILD_TESTSETS=OFF -DBUILD_UTILITIES=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DENABLE_CDF5=ON -DENABLE_DAP=OFF -DENABLE_NETCDF4=OFF -DENABLE_NETCDF_4=OFF -DENABLE_PLUGINS=OFF /tmp/netcdf-c-${NETCDF_VERSION}",
    "make install",
    "popd",
    "rm -rf /tmp/build-netcdf /tmp/netcdf-c-${NETCDF_VERSION}"
]

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = [
    "apk add libexecinfo libexecinfo-dev"
]
