[metadata]
name = muFFT
url = https://gitlab.com/muspectre/muspectre
description = muFFT is a wrapper for common FFT libraries with support for MPI parallelization
license = LGPL
license_files = LICENSE
author = Till Junge
author_email = till.junge@altermail.ch
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python

[options]
python_requires = >=3.5.0
zip_safe = False
setup_requires =
    numpy
packages =
    muFFT
    muGrid
package_dir =
    muFFT = language_bindings/libmufft/python/muFFT
    muGrid = language_bindings/libmugrid/python/muGrid

[options.extras_require]
test =
    pytest
    pytest-cov